examples/test/testpolicy18894.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18894
  namespace: namespace154
spec:
  podSelector:
    matchLabels:
      key41: value25
      key14: value42
      key15: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value2
          key48: value15
          key32: value13
      podSelector:
        matchLabels:
          key47: value47
          key41: value16
          key29: value16
